    are empty.
  * Use more variables in popcon-process.sh to make it easier to
    deploy on other servers.
  * Change code for detecting old dpkg version and using dpkg-awk
    instead to avoid error message when dpkg-query is missing. Modify
    dependency to depend on 'dpkg (>= 1.10) | dpkg-awk'.  This should
    make sure it work on woody as well.

  * Translations
    - Updated Japanese from Kenshi Muto. (Closes: #317402)
    - Updated Russian from Yuri Kozlov. (Closes: #317449)
    - Updated Vietnamese from Phan Vinh Thinh. (Closes: #317630)
    - Updated German by Dennis Stampfer.
    - Updated Albanian by Elian Myftiu. (Closes: #319079)
    - Updated Arabic by Ossama M. Khayat.
    - Updated Polish by Bartosz Fenski. (Closes: #320132)

 -- Dennis Stampfer <seppy@debian.org>  Mon, 11 Jul 2005 21:18:26 +0300

popularity-contest (1.30) unstable; urgency=low

  * Add support for reporting using http POST to a list of URLs.
    Uploading using content-type text/plain, content-encoding
    x-gzip, with 30 second timeout. (Closes: #239097)
  * HTTP submissions are enabled by default for new installs, but
    disabled by default for upgrades.
  * New client script /usr/share/popularity-contest/popcon-upload.
  * New server CGI /usr/share/doc/popularity-contest/popcon.cgi.
  * Added simple FAQ entry about the http POST feature.
  * Code done by Bill Allombert.  Patch based on code from Ubuntu,
    though reimplemented in perl to avoid python dependency.  The
    ubuntu versions are included in the source package as
    popcon-submit-ubuntu.cgi and popcon-upload-ubuntu.
  * Added low priority debconf question asking if http should be used.
    Only ask this question if participating.
  * Rewrote the participation template text, to only talk about
    submissions and not emails, making it neutral to the submission
    method used.
  * debian/cron.weekly:
    - Try to run /usr/share/popularity-contest/popcon-upload if
      USEHTTP is enabled