@@ -35,15 +35,16 @@ binary-indep: build install
 	dh_testdir
 	dh_testroot
 	dh_installdocs README FAQ
-	dh_installexamples prepop.pl popcon-process.sh popanal.py popcon.pl popcon-stat.pl popcon-submit.cgi clean-filter clean-genpkglist README.examples
-	dh_installmenu
 	dh_installcron
 	dh_installman debian/popularity-contest.8 debian/popcon-largest-unused.8
 	dh_installdebconf
 	dh_installchangelogs
+# Compress before the examples are installed for easy access to the
+# server scripts
+	dh_compress
+	dh_installexamples prepop.pl popcon-process.sh popanal.py popcon.pl popcon-stat.pl popcon-submit.cgi clean-filter clean-genpkglist README.examples
 	dh_perl -d
 	dh_strip
-	dh_compress
 	dh_fixperms
 	dh_installdeb
 	dh_shlibdeps
